# PhotoFilterClient

./: .gitignore  PhotoFilterApplyPath.md  PhotoFilterArchitectureUI.md  PhotoFilterDesign.md  PhotoFilterSpike.md  README.md  RELEASE_NOTES_v0.1.0.md  TODO.md  spike1_annotate.py  spike1_classify.py  spike1_v2.py  spike2_stability.py
snappick/: README.md  index.html  package-lock.json  package.json
snappick/src/: App.vue
snappick/src-tauri/: Cargo.toml  tauri.conf.json
snappick/src-tauri/src/: lib.rs
spike3-app/: index.html  package.json  vite.config.js
spike3-app/src/: App.vue
spike3-app/src-tauri/: Cargo.toml  tauri.conf.json
spike3-app/src-tauri/capabilities/: default.json
spike3-app/src-tauri/src/: lib.rs
